--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="hero">
   <h1>I am <span id="typed"></span></h1>
   <p>Data Science | ML | Research</p>
-  <a href="assets/resume.pdf" download class="btn">Download Resume</a>
+  <a href="assets/Sandra_KS_resume.pdf" download class="btn">Download Resume</a>
 </section>
 
 <!-- ABOUT -->
@@ -106,3 +106,4 @@
 
 </body>
 </html>
+
