--- a/index.html
+++ b/index.html
@@ -3,108 +3,173 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sandra KS | Portfolio</title>
+  <title>Sandra KS | Data Science Portfolio</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" />
-
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <!-- NAVBAR -->
 <nav>
-  <div class="nav-left">Sandra</div>
+  <div class="nav-left">Sandra KS</div>
   <ul class="nav-right">
     <li><a href="#about">About</a></li>
-    <li><a href="#skills">Skills</a></li>
+    <li><a href="#education">Education</a></li>
     <li><a href="#experience">Experience</a></li>
     <li><a href="#projects">Projects</a></li>
+    <li><a href="#certifications">Certifications</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
 <!-- HERO -->
 <section class="hero">
-  <h1>I am Sandra KS</h1>
-  <p>Data Science | Machine Learning | Research</p>
+  <h1>Sandra KS</h1>
+  <p>Integrated MSc Data Science (4th Year) | ML | Research</p>
   <a class="btn" href="assets/Sandra_KS_resume.pdf" download>Download Resume</a>
 </section>
 
 <!-- ABOUT -->
-<section id="about" data-aos="fade-up">
+<section id="about">
   <h2>About Me</h2>
   <p>
-    Integrated MSc Data Science student passionate about Machine Learning,
-    Healthcare AI, and research-driven intelligent systems.
+    I am a <strong>4th-year Integrated MSc Data Science student</strong> at
+    <strong>Amrita Vishwa Vidyapeetham</strong>, with strong interests in
+    Machine Learning, Healthcare AI, and research-driven intelligent systems.
+  </p>
+  <p>
+    My experience includes end-to-end data science workflows — data preprocessing,
+    statistical analysis, predictive modeling, and analytical storytelling.
+    I enjoy transforming complex datasets into meaningful insights.
   </p>
 </section>
 
-<!-- SKILLS -->
-<section id="skills" data-aos="fade-up">
-  <h2>Skills</h2>
+<!-- EDUCATION -->
+<section id="education">
+  <h2>Education</h2>
 
-  <div class="skills-container">
-    <div class="skill-circle">Python</div>
-    <div class="skill-circle">Machine Learning</div>
-    <div class="skill-circle">Data Analysis</div>
-    <div class="skill-circle">Deep Learning</div>
+  <div class="card">
+    <h3>Integrated MSc in Data Science</h3>
+    <span>Amrita Vishwa Vidyapeetham, Coimbatore</span>
+    <p class="meta">2022 – 2027 | Currently in 4th Year</p>
+    <p>
+      Focused on Machine Learning, Deep Learning, Statistical Modeling,
+      Data Visualization, and AI-driven research.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Higher Secondary Education</h3>
+    <span>Christ Nagar School</span>
+    <p class="meta">2019 – 2021 | Grade: 87.4%</p>
+    <p>Physics, Chemistry, Mathematics, Biology</p>
+  </div>
+
+  <div class="card">
+    <h3>Higher School Education</h3>
+    <span>Christ Nagar School</span>
+    <p class="meta">2019 | Grade: 91.8%</p>
   </div>
 </section>
 
 <!-- EXPERIENCE -->
-<section id="experience" data-aos="fade-up">
+<section id="experience">
   <h2>Experience</h2>
 
-  <div class="experience-box">
+  <div class="card">
     <h3>Research Intern</h3>
     <span>Digital University Kerala</span>
+    <p class="meta">Apr 2025 – Jun 2025</p>
     <p>
-      Worked on graph-based machine learning models for acoustic signal
-      processing and conducted extensive literature review.
+      Conducted machine learning research on graph-based modeling for
+      acoustic signal processing. Implemented and evaluated multiple
+      GNN architectures and performed extensive literature review.
     </p>
   </div>
 </section>
 
 <!-- PROJECTS -->
-<section id="projects" data-aos="fade-up">
+<section id="projects">
   <h2>Projects</h2>
 
   <div class="projects-grid">
-    <div class="project-card">Heart Disease Prediction</div>
-    <div class="project-card">Mental Health Stress Tracker</div>
-    <div class="project-card">Cyclone Prediction System</div>
-    <div class="project-card">Crop Production Dashboard</div>
-    <div class="project-card">Gold Price Forecasting</div>
-    <div class="project-card">GNN Acoustic Signal Modeling</div>
+
+    <div class="project-card">
+      <h3>Human–Opponent Modelling in Rock–Paper–Scissors</h3>
+      <p>
+        Adaptive Reinforcement Learning system using MediaPipe and OpenCV
+        for real-time hand gesture recognition. The agent learns human
+        strategies using Q-learning and behavior prediction.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>Improving Crop Production using Agro Deep Learning</h3>
+      <p>
+        Multi-input deep learning framework integrating weather data,
+        soil parameters, NDVI, and crop type for yield prediction.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>North Indian Ocean Cyclogenesis Analysis</h3>
+      <p>
+        Machine learning-based analysis of cyclone activity using
+        historical meteorological data to identify long-term trends.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>Parkinson’s UPDRS Prediction</h3>
+      <p>
+        Regression-based prediction of Parkinson’s disease progression
+        using clinical and biological features.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>Crop Production Dashboard (1997–2017)</h3>
+      <p>
+        Interactive data visualization dashboard analyzing agricultural
+        production trends across Indian states.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>Gold Price Forecasting</h3>
+      <p>
+        Time-series forecasting using ARIMA, Prophet, XGBoost, and LSTM
+        with multivariate economic indicators.
+      </p>
+    </div>
+
   </div>
+</section>
+
+<!-- CERTIFICATIONS -->
+<section id="certifications">
+  <h2>Certifications</h2>
+
+  <ul class="cert-list">
+    <li>Fundamentals of Reinforcement Learning – Coursera</li>
+    <li>Google Cloud Generative AI Learning Path – Google Cloud</li>
+    <li>Data Analysis for Biologists – NPTEL (77%)</li>
+    <li>Python Data Structures – Great Learning</li>
+  </ul>
 </section>
 
 <!-- CONTACT -->
-<section id="contact" data-aos="fade-up">
+<section id="contact">
   <h2>Contact</h2>
 
-  <div class="contact-box">
-    <p>Email: <a href="mailto:sandrakaveesher@gmail.com">sandrakaveesher@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/kssandraeshwar" target="_blank">kssandraeshwar</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/sandrasmithakaveesher" target="_blank">Sandra KS</a></p>
-  </div>
+  <p>Email: sandrakaveesher@gmail.com</p>
+  <p>GitHub: github.com/kssandraeshwar</p>
+  <p>LinkedIn: linkedin.com/in/sandrasmithakaveesher</p>
 </section>
 
-<!-- FOOTER -->
 <footer>
   <p>© 2026 Sandra KS</p>
 </footer>
 
-<!-- JS -->
-<script src="js/main.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init({ duration: 900, once: true });
-</script>
-
 </body>
 </html>
-
-
