--- a/index.html
+++ b/index.html
@@ -162,10 +162,28 @@
 <section id="contact">
   <h2>Contact</h2>
 
-  <p>Email: sandrakaveesher@gmail.com</p>
-  <p>GitHub: github.com/kssandraeshwar</p>
-  <p>LinkedIn: linkedin.com/in/sandrasmithakaveesher</p>
+  <p>
+    Email:
+    <a href="mailto:sandrakaveesher@gmail.com">
+      sandrakaveesher@gmail.com
+    </a>
+  </p>
+
+  <p>
+    GitHub:
+    <a href="https://github.com/kssandraeshwar" target="_blank">
+      github.com/kssandraeshwar
+    </a>
+  </p>
+
+  <p>
+    LinkedIn:
+    <a href="https://linkedin.com/in/sandrasmithakaveesher" target="_blank">
+      linkedin.com/in/sandrasmithakaveesher
+    </a>
+  </p>
 </section>
+
 
 <footer>
   <p>© 2026 Sandra KS</p>
@@ -173,3 +191,4 @@
 
 </body>
 </html>
+
