--- a/index.html
+++ b/index.html
@@ -24,10 +24,26 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1>Sandra KS</h1>
-  <p>Integrated MSc Data Science (4th Year) | ML | Research</p>
-  <a class="btn" href="assets/Sandra_KS_resume.pdf" download>Download Resume</a>
+  <div class="hero-content">
+    
+    <div class="hero-text">
+      <h1>Sandra KS</h1>
+      <p>Integrated MSc Data Science (4th Year)</p>
+      <p class="sub">
+        Machine Learning • Healthcare AI • Research
+      </p>
+      <a class="btn" href="assets/Sandra_KS_resume.pdf" download>
+        Download Resume
+      </a>
+    </div>
+
+    <div class="hero-image">
+      <img src="assets/passport image.jpg" alt="Sandra KS">
+    </div>
+
+  </div>
 </section>
+
 
 <!-- ABOUT -->
 <section id="about">
@@ -191,4 +207,5 @@
 
 </body>
 </html>
+
 
