--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="assets/passport image.jpg" alt="Sandra KS">
+      <img src="assets/verceldp.jpeg" alt="Sandra KS">
     </div>
 
   </div>
@@ -207,5 +207,6 @@
 
 </body>
 </html>
+
 
 
