--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="sub">
         Machine Learning • Healthcare AI • Research
       </p>
-      <a class="btn" href="assets/Sandra_KS_resume.pdf" download>
+      <a class="btn" href="assets/SandraKSresume.pdf" download>
         Download Resume
       </a>
     </div>
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
